# blueteeth

./: .gitignore  CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
